[workspace]
members = [
    "cuvs",
    "cuvs-sys",
]
resolver = "2"

[workspace.package]
# rapids-pre-commit-hooks: disable-next-line[verify-hardcoded-version]
version = "26.4.0"
edition = "2021"
repository = "https://github.com/rapidsai/cuvs"
homepage = "https://github.com/rapidsai/cuvs"
description = "RAPIDS vector search library"
authors = ["NVIDIA Corporation"]
license = "Apache-2.0"
