# SPDX-FileCopyrightText: Copyright (c) 2024-2026, NVIDIA CORPORATION.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "cuvs",
    "cuvs-sys",
]
resolver = "2"

[workspace.package]
version = "26.8.0"
edition = "2024"
repository = "https://github.com/rapidsai/cuvs"
homepage = "https://github.com/rapidsai/cuvs"
description = "Vector Search and Clustering on the GPU"
authors = ["NVIDIA Corporation"]
license = "Apache-2.0"

[workspace.dependencies]
cuvs-sys = { path = "cuvs-sys", version = "26.8.0" }
